--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -12,6 +12,17 @@ body
   height 6em
   background-color red
   
+#logo
+  content: ''
+  background: url('http://s4.postimg.org/yp0hvr8qx/pioz76ai_E.png') no-repeat
+  background-size 100%
+  height 5em
+  width 5em
+  top 0.3em
+  left 0.3em
+  position relative
+  float left
+  
 h1
   display inline-block
   position relative
