add package logos

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -11,22 +11,6 @@ body
   height 6em
   background-color red
 
-nav
-  float right
-  top 2.2em
-  right 0.5em
-  position relative
-
-a.nav.button-outlined
-  font 400 1.2em 'Exo' sans-serif
-  color black
-  border solid black 0.15em
-  padding 0.5em
-  margin 0.5em
-  &:hover
-    border-color #FFDDBA
-    color #FFDDBA
-
 .logo
   background: url('http://s4.postimg.org/yp0hvr8qx/pioz76ai_E.png') no-repeat
   background-size 100%
@@ -36,28 +20,48 @@ a.nav.button-outlined
   left 1em
   position relative
   float left
-  
+
 .title
   display inline-block
   position relative
   top 0.4em
   left 0.8em
   font 900 2.8em 'Exo' sans-serif
-  
+
+nav
+  float right
+  top 2.2em
+  right 0.5em
+  position relative
+
+.nav.button-outlined
+  font 400 1.2em 'Exo' sans-serif
+  color black
+  border solid black 0.15em
+  padding 0.5em
+  margin 0.5em
+  &:hover
+    border-color #FFDDBA
+    color #FFDDBA
+
 .container
   background-color lightred
-  height 45em
+  height 42em
   
+.summary
+  position relative
+  top 2em
+
+.github-link
+  display block
+  height 7em
+
 h2
   font 600 2em 'Exo' sans-serif
   color black
   padding 0.9em
   margin-bottom 0em
 
-.github-link
-  display block
-  height 7em
-  
 .github-logo
   background: url('http://s21.postimg.org/nxej0libb/github_logo.png') no-repeat
   background-size 100%
@@ -66,6 +70,45 @@ h2
   top -5.15em
   left 34em
   position relative
+  
+.packages
+  position relative
+  bottom 1em
+  right 2.2em
+  margin-bottom 3em
+
+.karma
+.webpack
+.travis
+  margin 4em 0em
+
+.webpack-logo
+  background: url('http://s29.postimg.org/u3fnst3tz/webpack.png') no-repeat
+.karma-logo
+  background: url('http://s9.postimg.org/efjx954tr/karma.png') no-repeat
+.travis-logo
+  background: url('http://s28.postimg.org/r308rvvvh/travis.png') no-repeat
+
+.karma-logo
+.webpack-logo
+.travis-logo
+  background-size 100%
+  height 4em
+  width 4em
+  float left
+  bottom 0.4em
+  right 2em
+  position relative
+
+.travis
+  position relative
+  left 0.8em
+
+.travis-logo  
+  height 3.2em
+  width 3.2em
+  top 0.2em
+  right 2.2em
 
 h4
   font 500 1.5em 'Exo' sans-serif
