--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -47,6 +47,7 @@ nav
 .container
   background-color lightred
   height 42em
+  width 40em
   
 .summary
   position relative
@@ -67,8 +68,9 @@ h2
   background-size 100%
   height 4em
   width 4em
-  top -5.15em
-  left 34em
+  bottom 13.3em
+  left 16.5em
+  float right
   position relative
   
 .packages
